# Introduction_to_Haskell_2ed_source

C02/: C02.cabal
C05/: BinarySearch.hs  CalPi.hs  Ham.hs  Hanoi.hs  Recursion.hs  Rome.hs  chapter05.hs  fib_compare.hs
C06/: Caesar.hs  Combinations.hs  LearnShortPath.hs  ListComp.hs  PrimeNumbers.hs  ShortestPath.hs
C07/: Fold.hs  chapter07.hs
C08/: C08.cabal  Huffman.hs  LogicCalculator.hs  RoserTreeZipper.hs  Zipper.hs  stack.yaml
C08/src/: DataType.hs  GADTs.hs  HuffmanLearn.hs  Kind.hs  Newtype.hs  Sugar.hs  TwentyFour.hs  chapter8.hs
C09/: 9-2-3.hs  Applicative.hs  B.hs  C09.cabal  Existential.hs  Functor.hs  Instance.hs  Num.hs  Overloading.hs  TraversableTest2.hs  stack.yaml
C09/src/: A.hs  AssociatedType.hs  Collection.hs  Derive1.hs  FoldableTest.hs  ListLiteral.hs  Parser.hs  ServerConnect.hs  TraversableTest.hs  VarArg.hs  derive.hs
C10/: Maybe.hs  MonadFunction.hs  SafeEval.hs  SimpleParser.hs
C11/: Main.hs  SystemProcess.hs  UnsafeIOTest.hs  printf.hs
C12/: MergeSort.hs  Reader.hs  Relation.hs  VarBind.hs  Writer.hs
C12/ReversePolish/: Main.hs  ReversePolish.cabal
C12/ReversePolish/src/: Calculator.hs  Scanner.hs
C12/StackCalc/: StackCalc.cabal
C12/StackCalc/src/: Calculator.hs  Scanner.hs
C13/: Compiler.hs  MonadComp.hs  MonadLift.hs  MonadOrder.hs  MonadOrder2.hs  Parser.hs  StateMaybe.hs
C14/: C14.cabal  Calculator.hs  ContMonad1.hs  ContMonad3.hs  FreeMonad1.hs  FreeMonad2.hs  FreeMonad3.hs  Parser.hs  ParserCalc.hs  stack.yaml
