name:                StackCalc
version:             0.1.0.0
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:
                  Calculator
                , Scanner
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl

executable calc
           main-is:             Main.hs
           build-depends:
                         base >= 4.7 && < 5
                       , StackCalc
                       , mtl